<resources>
    <string name="app_name">QuelPrixImmo</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="label_nature_mutation">Nature de la mutation</string>
    <string name="label_type_local">Type de local</string>
    <string name="label_nombre_pieces_principales">Nombre de pièces principales</string>
    <string name="hint_nombre_pieces_principales">1, 2, 3…</string>
    <string name="button_search">Rechercher</string>

    <string name="exemple_valeur_nature">165 000 € / Vente</string>
    <string name="exemple_valeur_fonciere">165 000 €</string>
    <string name="exemple_nature_mutation">Vente</string>
    <string name="exemple_date_mutation">14/12/2015</string>
    <string name="exemple_adresse">3B RUE DE L\'EGLISE</string>
    <string name="exemple_numero_voie">3</string>
    <string name="exemple_suffixe_numero">B</string>
    <string name="exemple_type_voie">RUE</string>
    <string name="exemple_voie">DE L\'EGLISE</string>
    <string name="exemple_surface">128m2</string>
    <string name="exemple_local_pieces">Maison/4p</string>

    <string name="description_image_good">Image - Type de local</string>
    <string name="description_image_mutation">Image - Mutation</string>

    <string name="spinner_choice_tout">Tout</string>
    <string name="spinner_choice_maison">Maison</string>
    <string name="spinner_choice_appartement">Appartement</string>
    <string name="spinner_choice_vente">Vente</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>