<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_good"
        app:columnCount="2"
        app:rowCount="2">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/image_size_little"
            android:layout_height="@dimen/image_size_little"
            android:layout_marginEnd="@dimen/margin_right_image"
            android:layout_marginRight="@dimen/margin_right_image"
            android:contentDescription="@string/description_image_good"
            app:layout_column="0"
            app:layout_gravity="center"
            app:layout_rowSpan="2"
            app:srcCompat="@drawable/maison" />

        <TextView
            android:id="@+id/surface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemple_surface"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_column="1"
            app:layout_row="0" />

        <TextView
            android:id="@+id/local_pieces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exemple_local_pieces"
            android:textSize="18sp" />
    </androidx.gridlayout.widget.GridLayout>
</LinearLayout>