<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="346dp"
        android:layout_height="566dp"
        app:columnCount="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="5">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Stéphane Plaza"
            android:textSize="24sp"
            app:layout_gravity="center"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/label_type_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/label_type_local"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/type_local"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:entries="@array/type_local_entries" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_row="2"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/label_date_nature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/label_nature_mutation"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/nature_mutation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:entries="@array/nature_mutation_entries" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_row="3"
            app:layout_rowWeight="1">

            <TextView
                android:id="@+id/label_nombre_pieces_principales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/label_nombre_pieces_principales"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nombre_pieces_principales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_nombre_pieces_principales"
                android:importantForAutofill="no"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            app:layout_gravity="center"
            app:layout_row="4"
            app:layout_rowWeight="1" />

    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>